# skia-template

./: .gitmodules  CMakeLists.txt  main.cpp
scripts/: build-skia.sh
